Changed name and added getObject in WorkoutCtrl