@@ -12,7 +12,7 @@ public abstract class DBConnect{
 
   public void connectToDB() {
     try{
-      Class.forName("com.mysql.jdbc.Driver").newInstance();
+      Class.forName("com.mysql.jdbc.Driver").getDeclaredConstructor().newInstance();
       String user = System.getenv("DB_TRENINGSDAGBOK_USER");
       String password = System.getenv("DB_TRENINGSDAGBOK_PASS");
       connection = DriverManager.getConnection("jdbc:mysql://127.0.0.1/Treningsdagbok?autoReconnect=true&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC", user, password);
